--- a/visit-myanmar/index.html
+++ b/visit-myanmar/index.html
@@ -1,4 +1,5 @@
 <head>
+	<link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
@@ -7,7 +8,7 @@
   <h1 class="title">Visit Myanmar</h1>
 </div>
 
-<p>
+<p >
   Descriptions to come. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer consectetur, libero eget bibendum elementum, lorem orci rutrum justo, at fermentum neque felis ac ex. Phasellus suscipit dapibus ante, eu sodales risus sagittis ut. Phasellus eget augue purus. Sed eget auctor felis, egestas vestibulum augue. Aenean pharetra metus quis orci consequat dapibus. Integer aliquam aliquet ipsum ut pellentesque. Curabitur cursus, nibh ut vehicula maximus, eros libero pretium diam, eu luctus nisl mauris a augue. Nulla luctus in orci non vulputate. Suspendisse at tortor elit.
 </p>
 
